--- a/index.html
+++ b/index.html
@@ -2,22 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HubSpot Tracking Practice Site</title>
+  <title>HubSpot Practice Site</title>
 
-  <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na2.hs-scripts.com/244741734.js"></script>
-  <!-- End of HubSpot Embed Code -->
+  <!-- HubSpot Tracking Code -->
+  <script
+    type="text/javascript"
+    id="hs-script-loader"
+    async
+    defer
+    src="//js-na2.hs-scripts.com/244741734.js">
+  </script>
 
 </head>
 <body>
 
   <h1>HubSpot Tracking Practice</h1>
-  <p>This is a dummy website for learning HubSpot tracking.</p>
+  <p>This page is for testing HubSpot tracking and forms.</p>
 
-  <p>
-    Visit multiple pages, then submit a HubSpot form to see how
-    page views and sessions appear in the contact timeline.
-  </p>
+  <h2>Contact Form</h2>
+
+  <!-- 🔽 PASTE YOUR FORM CODE EXACTLY HERE 🔽 -->
+
+  <script src="https://js-na2.hsforms.net/forms/embed/244741734.js" defer></script>
+  <div
+    class="hs-form-frame"
+    data-region="na2"
+    data-form-id="9ac6cd97-cd58-4766-9fe6-b6eed2d088b8"
+    data-portal-id="244741734">
+  </div>
+
+  <!-- 🔼 END FORM CODE 🔼 -->
 
 </body>
 </html>
