--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
   <!-- 🔽 PASTE YOUR FORM CODE EXACTLY HERE 🔽 -->
 
-  <script src="https://js-na2.hsforms.net/forms/embed/244741734.js" defer></script>
-  <div
-    class="hs-form-frame"
-    data-region="na2"
-    data-form-id="9ac6cd97-cd58-4766-9fe6-b6eed2d088b8"
-    data-portal-id="244741734">
-  </div>
-
-  <!-- 🔼 END FORM CODE 🔼 -->
+  <script charset="utf-8" type="text/javascript" src="//js-na2.hsforms.net/forms/embed/v2.js"></script>
+<script>
+  hbspt.forms.create({
+    region: "na2",
+    portalId: "244741734",
+    formId: "9ac6cd97-cd58-4766-9fe6-b6eed2d088b8"
+  });
+</script>
+<!-- End HubSpot Form -->
 
 </body>
 </html>
